# rc-stickynote

./: .blobs.toml  .gitignore  Cargo.toml  README.md  Vagrantfile  provision.sh
displayer/: Cargo.toml  README.md
displayer/src/: client.rs  epd7in5.rs  main.rs  simulator.rs  text.rs
hub/: Cargo.toml
hub/src/: main.rs
local/: .gitignore  client-config.example.toml  pi-gen-config.example
protocol/: Cargo.toml
protocol/src/: lib.rs
semi-pi-gen/: README.md  config
semi-pi-gen/stage1/00-boot-files/files/: config.txt
semi-pi-gen/stage2/01-sys-tweaks/: 00-packages  01-run.sh
semi-pi-gen/stage2/01-sys-tweaks/00-patches/: series
semi-pi-gen/stage2/02-net-tweaks/files/: wait.conf
semi-pi-gen/stage2/90-rc-stickynote/: 00-run.sh
semi-pi-gen/stage2/90-rc-stickynote/assets/: rc-stickynote-display-ip  rc-stickynote-displayer  rc-stickynote-housekeeping
