[package]
name = "displayer"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[features]
default = ["waveshare"]
simulator = ["sdl2"]
waveshare = ["epd-waveshare"]

[dependencies]
embedded-graphics = "^0.5"
embedded-hal = { version = "^0.2", features = ["unproven"] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "master", features = ["epd7in5", "graphics"], optional = true }
get_if_addrs = "^0.5"
linux-embedded-hal = "0.2"
sdl2 = { version = "0.31", optional = true }
structopt = "0.3"
