[package]
name = "rc_stickynote_displayer"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[features]
default = ["async-ssh2/vendored-openssl", "waveshare"]
simulator = ["sdl2"]
waveshare = ["epd-waveshare"]

[dependencies]
async-ssh2 = { git = "https://github.com/spebern/async-ssh2.git", branch = "master" }
chrono = "^0.4"
confy = "^0.3"
daemonize = "^0.4"
embedded-graphics = "^0.5"
embedded-hal = { version = "^0.2", features = ["unproven"] }
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "master", features = ["epd7in5", "graphics"], optional = true }
futures = "^0.3"
get_if_addrs = "^0.5"
linux-embedded-hal = "0.2"
rc_stickynote_protocol = { version = "0.1.0", path = "../protocol" }
rusttype = "^0.8"
sdl2 = { version = "0.31", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "0.3"
timeago = { version = "^0.2", features = ["chrono"] }
tokio = { version = "0.2", features = ["dns", "rt-threaded", "stream", "tcp", "time"] }
tokio-serde = { version = "^0.6", features = ["json"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
