[package]
name = "rc_stickynote_displayer"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[features]
default = ["async-ssh2/vendored-openssl", "waveshare"]
simulator = ["sdl2"]
waveshare = ["epd-waveshare"]

[dependencies]
async-compat = "^0.2"
async-ssh2 = "0.1.2-beta"
chrono = "^0.4"
confy = "^0.3"
daemonize = "^0.4"
embedded-graphics = "^0.7"
embedded-hal = { version = "^0.2", features = ["unproven"] }
epd-waveshare = { version = "^0.5", optional = true }
futures = "^0.3"
get_if_addrs = "^0.5"
linux-embedded-hal = { version = "^0.3", features = ["gpio_cdev"] }
openssl-probe = "^0.1"
rc_stickynote_protocol = { version = "0.1.0", path = "../protocol" }
rusttype = "^0.8"
sdl2 = { version = "0.31", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
smol = "^0.1"
structopt = "0.3"
timeago = { version = "^0.2", features = ["chrono"] }
tokio = { version = "^1.18", features = ["rt-multi-thread", "net", "time"] }
tokio-serde = { version = "^0.8", features = ["json"] }
tokio-util = { version = "^0.7", features = ["codec"] }
