[package]
name = "hub"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[dependencies]
futures = "^0.3"
protocol = { version = "0.1.0", path = "../protocol" }
serde_json = "^1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-serde = { version = "^0.6", features = ["json"] }
tokio-util = { version = "0.2.0", features = ["codec"] }
